# quants-mining

./: .gitignore  DAILY_REPORT_2026-02-28.md  DAILY_REPORT_2026-03-01.md  DAILY_REPORT_2026-03-02.md  DAILY_REPORT_2026-03-03.md  DEPLOY.md  README.md  USAGE.md  app.py  pyproject.toml  requirements.txt  run.py  scheduler.py
.github/workflows/: ci.yml
src/: __init__.py  config.py  heartbeat.py  pipeline.py  utils.py  utils_advanced.py
src/data/: __init__.py  advanced_indicators.py  fetcher.py  indicators.py  mock.py  real.py  realtime.py  sources.py  sources_config.py
src/quantum/: __init__.py
src/quantum/circuits/: __init__.py  portfolio_circuit.py
src/quantum/ml/: __init__.py  quantum_classifier.py
src/quantum/optimizers/: __init__.py  portfolio.py
src/trading/: __init__.py  enhanced.py  export.py  optimize.py  paper.py  portfolio.py  risk.py  visualize.py
src/trading/backtesting/: __init__.py  engine.py  portfolio_backtest.py
src/trading/strategies/: __init__.py  advanced.py  expert.py  strategy.py
tests/: __init__.py
tests/data/: test_processing.py
tests/quantum/: test_portfolio.py
tests/trading/: test_strategies.py
