[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmining"
version = "0.1.0"
description = "Quantitative trading strategy backtesting platform"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.30.0",
    "tqdm>=4.66.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
quantum = [
    "qiskit>=0.45.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
allow_redefinition = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.heartbeat"
disable_error_code = ["assignment", "union-attr", "return-value", "arg-type", "attr-defined", "var-annotated"]
